--- a/style.css
+++ b/style.css
@@ -1,18 +1,35 @@
-body{
+body {
   font-family: 'Poppins', sans-serif;
+  margin: 0;
 }
-h1{
+h1 {
   font-size: 50px;
 }
-.orange-color{
-  color:orange;
+.orange-color {
+  color: orange;
 }
-section{
-  display:flex;
+section {
+  display: flex;
 }
-.half-width{
-  width:50%;
+.half-width {
+  width: 50%;
+  padding-left: 2%;
 }
-.half-width img{
-  width: 100%;
+.half-width img {
+  width: 80%;
 }
+.btn-hireme{
+  background-color: orange;
+  text-decoration: none;
+  background-image: linear-gradient(orange, tomato) ;
+  font-weight: 600;
+  color: white;
+  padding: 10px 40px;
+  border-radius: 5px;
+}
+
+.top-banner{
+  background-image: url(images/top-banner.png);
+  background-repeat: no-repeat;
+}
+
