--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1 {
 .orange-color {
   color: orange;
 }
-section {
+.flexible-container {
   display: flex;
   margin-bottom: 100px;
 }
@@ -38,4 +38,29 @@ section {
   background-image: url(images/top-banner.png);
   background-repeat: no-repeat;
 }
+.experience-item{
+  width: 40%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-left: 10px;
+  box-shadow:10px 10px 40px grey;
+  border-radius: 10px;
 
+}
+
+.experience-area{
+  background-image: url(/images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
+}
+
+#full-stack{
+  border-left: 5px solid orange;
+}
+
+#baby-dev{
+  border-left: 5px solid blue;
+}
+footer p{
+  text-align: center;
+}
