--- a/style.css
+++ b/style.css
@@ -29,13 +29,13 @@ h1 {
   border-radius: 5px;
 }
 .dream-big{
-  background-image: url(images/dream-bg.png);
+  background-image: url(/images/dream-bg.png);
   background-repeat: no-repeat;
   background-position: right;
 }
 
 .top-banner{
-  background-image: url(images/top-banner.png);
+  background-image: url(/images/top-banner.png);
   background-repeat: no-repeat;
 }
 .experience-item{
